Adicionado mais alguns pseudo-elementos

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         .pai .lista2 li:last-child {
             background-color: purple;
         }
+        p::first-line { /*pseudo-elemento que altera todas as primeiras linhas dos <p>*/
+            background-color: blue;
+            color: yellow;
+        }
+        p::selection { /*pseudo-elemento de texto selecionado no <p>*/
+            background-color: black;
+            color: deeppink;
+        }
     </style>
 </head>
 
